# add_subdirectory(flex)
# add_subdirectory(yasli)


# add_library(loki STATIC ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
# ${CMAKE_CURRENT_SOURCE_DIR}/flex/*.cpp
# ${CMAKE_CURRENT_SOURCE_DIR}/yasli/*.cpp
# )

#
# # Specify sample program
# add_executable(loki_sample examples/sample.cpp)  # Replace with actual sample program
# target_link_libraries(loki_sample PRIVATE loki)
